--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
   background-image: url('map_background.png');
   background-size:cover;
 }
+  
+ .title {
+   font-family: cursive, Arial, serif;
+   font-size: 50px;
+   font-weight: bold;
 </style>
 
 <div class="map-bgd" align="center">
   <p><br><br><br><br><br><br></p>
+  
+  <div class="title">Caccia al tesoro</div>
 
-<iframe width="600px" height="600px" frameborder="0" allowfullscreen src="//umap.openstreetmap.fr/it/map/caccia-al-tesoro_443097?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=true&allowEdit=false&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=undefined&captionBar=false"></iframe>
+  <iframe width="600px" height="600px" frameborder="0" allowfullscreen src="//umap.openstreetmap.fr/it/map/caccia-al-tesoro_443097?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=true&allowEdit=false&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=undefined&captionBar=false"></iframe>
 
 </div>
