--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 }
   
  .title {
-   font-family: cursive, Arial, serif;
+   font-family: cursive, Arial;
    font-size: 50px;
    font-weight: bold;
 </style>
