--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
   height: 1384px;
   background-image: url('map_background.png');
   background-size:cover;
-}
+ }
   
  .title-div {
    font-family: cursive, Arial, sans-serif;
    font-size: 50px;
    font-weight: bold;
+ }
+ .instructions-par {
+   font-family: cursive, Arial, sans-serif;
+   font-size: 20px;
+   font-weight: normal;
 </style>
 
 <div class="map-bgd" align="center">
@@ -19,4 +24,5 @@
 
   <iframe width="600px" height="600px" frameborder="0" allowfullscreen src="//umap.openstreetmap.fr/it/map/caccia-al-tesoro_443097?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=true&allowEdit=false&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=undefined&captionBar=false"></iframe>
 
+  <p class="instructions-par">Qua le istruzioni</p>
 </div>
