--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="map-bgd" align="center">
   <p><br><br><br><br><br><br></p>
   
-  <div class="title-div">Caccia al tesoro</div>
+  <div class="title-div">Mappa del tesoro</div>
 
   <iframe width="600px" height="600px" frameborder="0" allowfullscreen src="//umap.openstreetmap.fr/it/map/caccia-al-tesoro_443097?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=true&allowEdit=false&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=undefined&captionBar=false"></iframe>
 
