--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
  <iframe width="600px" height="600px" frameborder="0" allowfullscreen src="//umap.openstreetmap.fr/it/map/caccia-al-tesoro_443097?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=true&allowEdit=false&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=undefined&captionBar=false"></iframe>
 
-  <div class="instructions-par">
+  <div class="instructions-par">                                    <br>
     aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   </div>
 </div>
