--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
  <iframe width="600px" height="600px" frameborder="0" allowfullscreen src="//umap.openstreetmap.fr/it/map/caccia-al-tesoro_443097?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=true&allowEdit=false&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=undefined&captionBar=false"></iframe>
 
   <div class="instructions-par">                                    <br>
-    
+     L'uscita inizia e sarà speciale, comincia ora un'impresa epocale. <br>
+     Fatta di indizi, prove e tranelli,dovrete spremere i vostri cervelli! <br>
+     Seguite le tracce e finite il gioco,forza correte, il tempo è già poco. <br>
   </div>
 </div>
