--- a/theend.html
+++ b/theend.html
@@ -22,7 +22,7 @@
   
   <div class="title-div">The end</div>
   <div class="instructions-par">
-    bla bla bla
+    Dopo aver "camminato" in lungo e in largo per Verona e non solo è giunta l'ora di tornare tutti alle proprie case
     <a href="https://forms.gle/gckmGvf5KACJmagM7">Inserite qua i luoghi visitati e le risposte ai giochi</a>
   </div>
 </div>
