--- a/theend.html
+++ b/theend.html
@@ -15,6 +15,7 @@
    font-family: cursive, Arial, sans-serif;
    font-size: 20px;
    font-weight: normal;
+   text-align: center
 </style>
 
 <div class="map-bgd" align="center">
@@ -22,7 +23,9 @@
   
   <div class="title-div">The end</div>
   <div class="instructions-par">
-    Dopo aver "camminato" in lungo e in largo per Verona e non solo è giunta l'ora di tornare tutti alle proprie case
+    Dopo aver "camminato" in lungo e in largo per Verona e non solo è giunta l'ora di tornare <br>
+    tutti alle proprie case
+    <br>
     <a href="https://forms.gle/gckmGvf5KACJmagM7">Inserite qua i luoghi visitati e le risposte ai giochi</a>
   </div>
 </div>
