--- a/theend.html
+++ b/theend.html
@@ -24,7 +24,10 @@
   <div class="title-div">The end</div>
   <div class="instructions-par">
     Dopo aver "camminato" in lungo e in largo per Verona e non solo è giunta l'ora di tornare <br>
-    tutti alle proprie case
+    tutti alle proprie case...e di godersi una meritata doccia! <br>
+    E' stata un' "uscita" un po' diversa, ma speriamo vi si piaciuta...almeno un pochino! <br>
+    Prima di chiudere tutto non dimenticatevi di compilare il form qui sotto con tutti i <br>
+    nomi dei luoghi visitati e le soluzioni dei giochi!
     <br>
     <a href="https://forms.gle/gckmGvf5KACJmagM7">Inserite qua i luoghi visitati e le risposte ai giochi</a>
   </div>
