--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
    font-family: cursive, Arial, sans-serif;
    font-size: 20px;
    font-weight: normal;
+   text-align: center;
 </style>
 
 <div class="map-bgd" align="center">
@@ -24,7 +25,20 @@
 
   <div class="instructions-par">                                    <br>
      "L'uscita inizia e sarà speciale, comincia ora un'impresa epocale. <br>
-     Fatta di indizi, prove e tranelli,dovrete spremere i vostri cervelli! <br>
-     Seguite le tracce e finite il gioco, forza correte, il tempo è già poco." <br>
+     Fatta di indizi, prove e tranelli, dovrete spremere i vostri cervelli! <br>
+     Seguite le tracce e finite il gioco, forza correte, il tempo è già poco." <br> <br>
+     Istruzioni: <br>
+     Si tratta di una specie di caccia al tesoro! Cliccando sui vari punti <br>
+     si aprirà una finestrella con il nome del luogo, le indicazioni per il <br>
+     luogo successivo e, se presente, il gioco da fare per ottenere punti. <br>
+     Cercate di seguire le indicazioni: ci sono molti tranelli in giro eheh, <br>
+     ma anche qualche luogo bonus che vi consentirà di prendere punti in più! <br>
+     Ampliate i vostri orizzonti! <br>
+     Di ogni luogo che visitate segnatevi il nome e la soluzione del gioco: alla <br>
+     fine vi verrà chiesto inserirli in un modulo. <br>
+     Vincerà prima di tutto chi farà più punti, ma anche la velocità conterà! <br>
+     Per questo non è necessario risolvere subito il gioco di ogni luogo, per <br>
+     essere più veloci vi conviene giocare di squadra e dividerveli mentre qualcuno <br>
+     va avanti col percorso! <br>
   </div>
 </div>
