--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      "L'uscita inizia e sarà speciale, comincia ora un'impresa epocale. <br>
      Fatta di indizi, prove e tranelli, dovrete spremere i vostri cervelli! <br>
      Seguite le tracce e finite il gioco, forza correte, il tempo è già poco." <br> <br>
-     Istruzioni: <br>
+     ISTRUZIONI <br>
      Si tratta di una specie di caccia al tesoro! Cliccando sui vari punti <br>
      si aprirà una finestrella con il nome del luogo, le indicazioni per il <br>
      luogo successivo e, se presente, il gioco da fare per ottenere punti. <br>
