--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
      Per questo non è necessario risolvere subito il gioco di ogni luogo, per <br>
      essere più veloci vi conviene giocare di squadra e dividerveli mentre qualcuno <br>
      va avanti col percorso! <br>
+     Potrete inviare più risposte, terremo la migliore.
   </div>
 </div>
