--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
   <div class="instructions-par">                                    <br>
      "L'uscita inizia e sarà speciale, comincia ora un'impresa epocale. <br>
      Fatta di indizi, prove e tranelli, dovrete spremere i vostri cervelli! <br>
-     Seguite le tracce e finite il gioco, forza correte, il tempo è già poco." <br> <br>
-     ISTRUZIONI <br>
+     Seguite le tracce e finite il gioco, forza correte, il tempo è già poco." <br>
+     ISTRUZIONI: <br>
      Si tratta di una specie di caccia al tesoro! Cliccando sui vari punti <br>
      si aprirà una finestrella con il nome del luogo, le indicazioni per il <br>
      luogo successivo e, se presente, il gioco da fare per ottenere punti. <br>
+     Si parte dalla sede, cioè dalla bandierina rossa! <br>
      Cercate di seguire le indicazioni: ci sono molti tranelli in giro eheh, <br>
      ma anche qualche luogo bonus che vi consentirà di prendere punti in più! <br>
      Ampliate i vostri orizzonti! <br>
